# NLSS-PyTools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/nlss-pytools/dependencies/: osSpecs.py  specs.json  textIO.py
src/pytools/: osSpecs.py  wsl.py
src/pytools/compressor/: compressor.py
src/pytools/dependencies/: specs.json
