[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NLSS-PyTools"
version = "1.0.2"
authors = [
  { name="Next Level Software Studio", email="seu@email.com" },
]
classifiers = [
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Natural Language :: English",
]
description = "NLSS Data Transfer System"
readme = "README.md"
requires-python = ">=3.14"

[project.urls]
"Homepage" = "https://github.com/NextLevelSoftwareStudio/NLSS-PyTools"

[tool.hatch.build.targets.wheel]
packages = ["src/nlss-pytools"]